# ROBOTIS-OP3

./: README.md
robotis_op3_foot_step_generator/: CMakeLists.txt  package.xml
robotis_op3_foot_step_generator/include/robotis_op3_foot_step_generator/: message_callback.h  robotis_foot_step_generator.h
robotis_op3_foot_step_generator/src/: main.cpp  message_callback.cpp  robotis_foot_step_generator.cpp
robotis_op3_gui/: CMakeLists.txt  mainpage.dox  package.xml
robotis_op3_gui/include/robotis_op3_gui/: main_window.hpp  qnode.hpp
robotis_op3_gui/src/: main.cpp  main_window.cpp  qnode.cpp
robotis_op3_gui/ui/: main_window.ui
robotis_op3_joint_controller_gui/: CMakeLists.txt  mainpage.dox  package.xml
robotis_op3_joint_controller_gui/include/robotis_op3_joint_controller_gui/: main_window.hpp  qnode.hpp
robotis_op3_joint_controller_gui/src/: main.cpp  main_window.cpp  qnode.cpp
robotis_op3_joint_controller_gui/ui/: main_window.ui
robotis_op3_kinematics_dynamics/: CMakeLists.txt  package.xml
robotis_op3_kinematics_dynamics/include/robotis_op3_kinematics_dynamics/: kinematics_dynamics.h  kinematics_dynamics_define.h  link_data.h
robotis_op3_kinematics_dynamics/include/robotis_op3_kinematics_dynamics/old/: _kinematics_dynamics.h  _kinematics_dynamics_define.h  _link_data.h
robotis_op3_kinematics_dynamics/src/: kinematics_dynamics.cpp  link_data.cpp
robotis_op3_manager/: CMakeLists.txt  package.xml
robotis_op3_manager/config/: ROBOTIS-OP3.robot  ROBOTIS_OP3.robot  dxl_init.yaml  offset.yaml
robotis_op3_manager/launch/: robotis_op3_manager.launch
robotis_op3_manager/src/: robotis_op3_manager.cpp
robotis_op3_motion_module/: CMakeLists.txt  package.xml
robotis_op3_motion_module/config/: _init_pose.yaml  friction_gain.yaml  ik_weight.yaml  init_pose.yaml  joint_gain.yaml  joint_gain_sim.yaml  torque_offset.yaml  zero_pose.yaml
robotis_op3_motion_module/config/old/: __joint_gain.yaml  joint_gain (another copy).yaml  joint_gain (copy).yaml
robotis_op3_motion_module/include/robotis_op3_motion_module/: motion_module.h
robotis_op3_motion_module/src/: motion_module.cpp
robotis_op3_motion_module_msgs/: CMakeLists.txt  package.xml
robotis_op3_motion_module_msgs/msg/: FrictionGain.msg  JointControllerGain.msg  RobotPose.msg  StepTimeData.msg  WholebodyKinematicsPose.msg
robotis_op3_motion_module_msgs/srv/: AddStepDataArray.srv  GetFrictionGain.srv  GetJointControllerGain.srv  GetWholebodyKinematicsPose.srv  SetBalanceParam.srv
robotis_op3_online_walking/: CMakeLists.txt  package.xml
robotis_op3_online_walking/include/robotis_op3_online_walking/: online_walking.h  op3_online_walking.h
robotis_op3_online_walking/src/: online_walking.cpp  op3_online_walking.cpp
