<?xml version="1.0"?>
<package>
  <name>robotis_op3_foot_step_generator</name>
  <version>0.0.0</version>
  <description>The robotis_op3_foot_step_generator package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_op3_motion_module_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
