<?xml version="1.0"?>
<package>
  <name>robotis_op3_kinematics_dynamics</name>
  <version>0.0.0</version>
  <description>The robotis_op3_kinematics_dynamics package</description>

  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
