<?xml version="1.0"?>
<package>
  <name>robotis_op3_manager</name>
  <version>0.0.0</version>
  <description>The robotis_op3_manager package</description>

  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>robotis_op3_online_walking</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_op3_motion_module</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>robotis_op3_online_walking</run_depend>
</package>
