<?xml version="1.0"?>
<package>
  <name>robotis_op3_online_walking</name>
  <version>0.0.0</version>
  <description>The robotis_op3_online_walking package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_op3_kinematics_dynamics</build_depend>
  <build_depend>robotis_op3_motion_module_msgs</build_depend>
  <build_depend>scilab_optimization</build_depend>
  <run_depend>robotis_device</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
